src/main/java/com/example/error/exception/notfound/UserNotFoundException.java
package com.example.error.exception.notfound;

import com.example.error.ErrorCode;

public class UserNotFoundException extends NotFoundException {

    public UserNotFoundException() {
        super(ErrorCode.USER_NOT_FOUND);
    }

}
